--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -10,10 +10,11 @@ jobs:
     name: "Python"
     runs-on: ubuntu-20.04
     steps:
+      - uses: actions/checkout@v2
       - uses: actions/setup-python@v4
         with:
           python-version: 3.6
-      - uses: actions/checkout@v2
+      - run: pip install build
       - run: make build
       - name: Publish a Python distribution to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
